--- a/ImmichFrame/Views/MainView.axaml
+++ b/ImmichFrame/Views/MainView.axaml
@@ -14,15 +14,13 @@
       <Setter Property="Opacity" Value="0"/>
       <Setter Property="HorizontalAlignment" Value="Stretch"/>
       <Setter Property="VerticalAlignment" Value="Stretch"/>
+      <Setter Property="Focusable" Value="True"/>
     </Style>
   </UserControl.Styles>
 
   <Grid ColumnDefinitions="*, *, *" RowDefinitions="*, *, *" Focusable="True">
-    <WebView x:Name="MainWebView" Url="{Binding ServerUri}" Focusable="False" Grid.ColumnSpan="3" Grid.RowSpan="3"/>
-    <Button x:Name="btnBack" Grid.Column="0" Grid.Row="1" Command="{Binding PreviousImageCommand}" HotKey="Left"/>
-    <Button x:Name="btnNext" Grid.Column="2" Grid.Row="1" Command="{Binding NextImageCommand}" HotKey="Right"/>
-    <Button x:Name="btnPause" Grid.Column="1" Grid.Row="1" Command="{Binding PauseImageCommand}" HotKey="Space"/>
-    <Button x:Name="btnQuit" Grid.Column="1" Grid.Row="2" Command="{Binding QuitCommand}" HotKey="Down"/>
-    <Button x:Name="btnSettings" Grid.Column="1" Grid.Row="0" Command="{Binding NavigateSettingsPageCommand}" HotKey="Up"/>
+    <WebView x:Name="MainWebView" IsHitTestVisible="False" Focusable="False" Url="{Binding ServerUri}" Grid.ColumnSpan="3" Grid.RowSpan="3"/>
+    <Button x:Name="btnQuit" Grid.Column="1" Grid.Row="2" Command="{Binding QuitCommand}" />
+    <Button x:Name="btnSettings" Grid.Column="1" Grid.Row="0" Command="{Binding NavigateSettingsPageCommand}" />
   </Grid>
 </UserControl>
