--- a/ImmichFrame/Views/MainView.axaml
+++ b/ImmichFrame/Views/MainView.axaml
@@ -11,16 +11,22 @@
   </Design.DataContext>
   <UserControl.Styles>
     <Style Selector="Button">
-      <Setter Property="Opacity" Value="0"/>
+      <Setter Property="Background" Value="Transparent"/>
       <Setter Property="HorizontalAlignment" Value="Stretch"/>
       <Setter Property="VerticalAlignment" Value="Stretch"/>
       <Setter Property="Focusable" Value="True"/>
     </Style>
   </UserControl.Styles>
 
-  <Grid ColumnDefinitions="*, *, *" RowDefinitions="*, *, *" Focusable="True">
-    <WebView x:Name="MainWebView" IsHitTestVisible="False" Focusable="False" Url="{Binding ServerUri}" Grid.ColumnSpan="3" Grid.RowSpan="3"/>
-    <Button x:Name="btnQuit" Grid.Column="1" Grid.Row="2" Command="{Binding QuitCommand}" />
-    <Button x:Name="btnSettings" Grid.Column="1" Grid.Row="0" Command="{Binding NavigateSettingsPageCommand}" />
+  <Grid ColumnDefinitions="*, *, *" RowDefinitions="*, *, *">
+    <WebView x:Name="MainWebView" Url="{Binding ServerUri}" Grid.ColumnSpan="3" Grid.RowSpan="3"/>
+
+    <Popup IsOpen="True" PlacementMode="Top" HorizontalAlignment="Center" >
+      <Button x:Name="btnSettings" Command="{Binding NavigateSettingsPageCommand}" Width="200" Height="200"/>
+    </Popup>
+
+    <Popup IsOpen="True" PlacementMode="Bottom" HorizontalAlignment="Center" >
+      <Button x:Name="btnQuit" Command="{Binding QuitCommand}" Width="200" Height="200"/>
+    </Popup>
   </Grid>
 </UserControl>
